tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoviceThaumaturg-AAAAAAAAAAAAAAAAAAAAFg==__EssentiaFilterin-AAAAAAAAAAAAAAAAAAAA_g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 254,
  "prerequisites": [
    240
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This nifty little device will filter essentia out of an Alchemical Crucible or Alchemical Boiler. Once it has received a single unit of any type, it will only accept this type until it is completely empty. You can place more than one on top of an alchemical furnace, and you should. Try to have one per essentia type in the item you're melting on a furnace.\n\nYou should lock the type with a Label, or every time it fills again, it's likely to be a different type, and gum up your pipes.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Essentia Filtering",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    240
  ],
  "rewards": [],
  "tasks": []
}
