tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__NoviceThaumaturg-AAAAAAAAAAAAAAAAAAAAFg==__GettingShards-AAAAAAAAAAAAAAAAAAAA6Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 233,
  "optional_prerequisites": [
    229,
    1970395360502219625
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "However you obtained them, you've collected a variety of Infused Shards. Now on how to use them...",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Getting Shards",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
